<resources>
    <string name="app_name">ExpenseTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="spinner_items">
        <item>Fruits</item>
        <item>Food</item>
        <item>Entertainment</item>
        <item>Bills</item>
        <item>Lifestyle</item>
    </string-array>

    <string name="transaction_history">Transaction History</string>
    <string name="date_form">Date From</string>
    <string name="date_to">Date To</string>
    <string name="go">GO</string>
    <string name="track_your_expense">Keep a track of all your expense</string>
    <string name="this_month">This Month</string>
    <string name="this_week">This Week</string>
    <string name="expense_so_far">Expense So Far</string>
    <string name="recent_expense">Recent Expenses</string>
    <string name="view_all">View All</string>
    <string name="add_new_expense">Add New Expense</string>
    <string name="subheading_add_transaction">Enter the details of your expense to help you track your spending</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="amount_hint">175</string>
    <string name="enter_description">Enter Description</string>
    <string name="description_hint">Lunch</string>
    <string name="select_category">Select Category</string>
    <string name="select_date">Select Date</string>
    <string name="select_category_subheading">Select a category that best describes what you spend your money on</string>
    <string name="rupees_symbol">\u20B9</string>
    <string name="home">Home</string>
    <string name="insights">Insights</string>
    <string name="expenses">Expenses</string>
    <string name="expense_history">Expense History</string>
    <string name="add_expense">Add Expense</string>
    <string name="this_year">This year</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="select_insight">Select Insight</string>
    <string name="select_insights_subheading">Select a category to see different insights on your expense</string>
</resources>