<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.AddTransactionActivity">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/add_new_expense"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backBtn" />

    <TextView
        android:id="@+id/subHeadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/subheading_add_transaction"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headingText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/subHeadingText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:fontFeatureSettings="16sp"
            android:text="@string/enter_amount"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_rupees"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/amount_hint"
            android:inputType="number"
            android:paddingStart="20dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:fontFeatureSettings="16sp"
            android:text="@string/enter_description"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/description_hint"
            android:inputType="text"
            android:paddingStart="20dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:fontFeatureSettings="16sp"
            android:text="@string/select_category"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/etCategory"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/edit_text_background"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:editable="false"
            android:fontFamily="sans-serif-medium"
            android:hint="Food"
            android:inputType="none"
            android:paddingStart="20dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:fontFeatureSettings="16sp"
            android:text="@string/select_date"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/edit_text_background"
            android:drawableEnd="@drawable/ic_date"
            android:editable="false"
            android:fontFamily="sans-serif-medium"
            android:inputType="none"
            android:paddingStart="20dp"
            android:paddingEnd="16dp"
            android:text="12-02-2024"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/add_expense"
            android:textAllCaps="false"
            app:cornerRadius="10dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>